# HexapodArmadillo

./: CMakeLists.txt
src/: maestro.cpp  maestro.h  main.cpp  util.h
src/Robot/: Point.cpp  Point.h  leg.cpp  leg.h  point.cpp  robot.cpp  robot.h  robotcontroler.cpp  robotcontroler.h  robotwalk.cpp  robotwalk.h
src/TCP/: tcpacceptor.cpp  tcpacceptor.h  tcpconnector.cpp  tcpconnector.h  tcpstream.cpp  tcpstream.h
